# postgresql-kineviz-bridge

./: .gitignore  LICENSE  README.md  pg_kineviz_server.py  pyproject.toml
docs/: cypher-to-sqlpgq-mapping.md  limitations.md  spanner-vs-postgresql19-sqlpgq.md
fixtures/: business_network_pg19.sql
fixtures/paysim/: 01_staging.sql  02_build_graph.sql  README.md
pg_kineviz_proxy/: __init__.py  backend.py  cypher_translator.py  element_expand.py  element_id.py  envelope.py  graph_schema.py  identity.py  logging_setup.py  metadata.py  mock_backend.py  pg_backend.py  predicate.py  proxy_api.py  proxy_models.py  query_log.py  query_processor.py  result_converter.py
scripts/: load_paysim.sh  probe_queries.py  simulate_kineviz.py
tests/: test_pipeline.py
tests/fixtures/: queries.jsonl
